2022-07-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/util/BuildFoundries.pl (LoadFoundry): Recast
	diagnostic message so that the user understands the consequence
	of failure to locate a Type 1 font file (that isn't one of the
	base 14 PostScript level 1 fonts): the font will be unavailable
	for the "pdf" output device.

2022-07-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/util/BuildFoundries.pl (LoadFoundry): Separate
	lists of Type 1 font names with spaces as well as commas, for
	better diagnostic message readability.  Also begin message in
	lowercase (per GNU Coding Standards).

2022-07-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/util/BuildFoundries.pl (LoadFoundry): Verify that
	`$foundrypath->[$j]` is defined before operating on it.

2022-07-10  G. Branden Robinson <g.branden.robinson@gmail.com>

	[afmtodit]: Clarify diagnostic message.

	* src/utils/afmtodit/afmtodit.pl: When we have excess Adobe
	Glyph List mappings for a groff special character identifier
	{making the reverse mapping from groff special character to font
	glyph name ambiguous}, report that we're ignoring the excess.
	Use "print STDERR" instead of Perl "warn" built-in since we want
	diagnostic messages to start with the name of the program
	emitting them.

2022-07-10  G. Branden Robinson <g.branden.robinson@gmail.com>

	[build]: Name and place PS->groff glyph name maps consistently.

	* font/devps/symbolmap: Rename from this...
	* font/devps/generate/symbol.map: ...to this.

	* font/devpdf/devpdf.am (font/devpdf/map/symbolmap): Rename
	target...
	(font/devpdf/map/symbol.map): ...to this.
	(font/devpdf/map/symbol.map): Copy "devps" version of file from
	its new location in the "generate" subdirectory.

	* font/devpdf/Foundry.in: Reflect rename.

	* font/devps/generate/Makefile (symbolmap): Rename target...
	($(srcdir)/symbol.map): ...to this.

	* font/devps/devps.am (DEVPSGENFILES, EXTRA_DIST):